--- a/dashboard/templates/dashboard/blog/form.html
+++ b/dashboard/templates/dashboard/blog/form.html
@@ -56,7 +56,7 @@
                                  </button>
                             </div>
                         </form>
-                    </di>
+                    </div>
                 </div>
             </div>
         </div>
