--- a/dashboard/templates/dashboard/product/form.html
+++ b/dashboard/templates/dashboard/product/form.html
@@ -99,7 +99,7 @@
                                 <a href="{% url 'dashboard:products' %}" class="btn btn-secondary btn-default">Cancel</a>
                             </div>
                         </form>
-                    </di>
+                    </div>
                 </div>
             </div>
         </div>
