--- a/dashboard/templates/dashboard/about/list.html
+++ b/dashboard/templates/dashboard/about/list.html
@@ -1,5 +1,5 @@
 {% extends 'dashboard/base/base.html' %}
-{% block title %} Colors {% endblock %}
+{% block title %} About {% endblock %}
 {% block content %}
 <div class="content-wrapper">
     <div class="content">							
@@ -15,13 +15,13 @@
                 <li class="breadcrumb-item">
                     Our
                 </li>
-                <li class="breadcrumb-item" aria-current="page">Colors</li>
+                <li class="breadcrumb-item" aria-current="page">Abouts</li>
                 </ol>
 
             </nav>
             
 <div class="input-group justify-content-end">
-                    <form action="{% url 'dashboard:colors' %}" method="GET" class="form-inline">
+                    <form action="{% url 'dashboard:abouts' %}" method="GET" class="form-inline">
                       <input type="text" name="title" class="form-control float-right searchInput"
                         id="SearchTitle"
                         placeholder="title"
@@ -41,12 +41,8 @@
                 <div class="card card-default">
                     <div class="card-header card-header-border-bottom justify-content-between">
                         <h2>Colors List</h2>
-                        <a href="{% url 'dashboard:color-create' %}" type="button" class="mb-1 btn btn-outline-primary">Add Colors</a>
-
-
+                        <a href="{% url 'dashboard:about-create' %}" type="button" class="mb-1 btn btn-outline-primary">Add Abouts</a>
                     </div>
-                    
-                    
                     <div class="card-body">
                         <table class="table table-hover ">
                             <thead>
@@ -54,22 +50,23 @@
                                     <th scope="col">S.N</th>
                                     <th scope="col">Title</th>
                                     <th scope="col">Image</th>
-                                    <th width="25%">Action</th>
+                                   
+                                
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for color in object_list %}
+                                {% for about in object_list %}
                                 <tr>
                                     <td scope="row">{{ forloop.counter }}</td>
-                                    <td>{{ color.title }}</td>
-                                    <td>{{ color.image }}</td>
-
+                                    <td>{{ about.title_one }}</td>
+                                    <td>{{ about.image }}</td>
+                                 
                                     <td>
                                     <span>
-                                            <a href="{% url 'dashboard:color-update' color.pk %}" class="btn btn-sm btn-success"><span class ="mdi mr-1 mdi-square-edit-outline">Edit</span></a>
+                                            <a href="{% url 'dashboard:about-update' about.pk %}" class="btn btn-sm btn-success"><span class ="mdi mr-1 mdi-square-edit-outline">Edit</span></a>
                                         </span>
                                         <span>
-                                            <a href="{% url 'dashboard:color-delete' color.pk %}" class="btn btn-sm btn-danger delete"><span class ="mdi mr-1 mdi-trash-can">Delete</span></a>
+                                            <a href="{% url 'dashboard:about-delete' about.pk %}" class="btn btn-sm btn-danger delete"><span class ="mdi mr-1 mdi-trash-can">Delete</span></a>
                                         </span>
 
                                       
