--- a/dashboard/templates/dashboard/about/list.html
+++ b/dashboard/templates/dashboard/about/list.html
@@ -22,7 +22,7 @@
             
 <div class="input-group justify-content-end">
                     <form action="{% url 'dashboard:abouts' %}" method="GET" class="form-inline">
-                      <input type="text" name="title" class="form-control float-right searchInput"
+                      <input type="text" name="title_one" class="form-control float-right searchInput"
                         id="SearchTitle"
                         placeholder="title"
                       />
