--- a/dashboard/templates/dashboard/product/form.html
+++ b/dashboard/templates/dashboard/product/form.html
@@ -44,6 +44,10 @@
                                     {{ form.marked_price }}
                                 </div>
                                 <div class="col-md-6 col-sm-12">
+                                    <label for="exampleFormControlInput1">Selling Price</label>
+                                    {{ form.selling_price }}
+                                </div>
+                                <div class="col-md-6 col-sm-12">
                                     <label for="exampleFormControlPassword">discount percent</label>
                                     {{ form.discount_percent }}
                                 </div>
