--- a/dashboard/templates/dashboard/newsletter/list.html
+++ b/dashboard/templates/dashboard/newsletter/list.html
@@ -1,5 +1,5 @@
 {% extends 'dashboard/base/base.html' %}
-
+{% block title %} Subscribers {% endblock %}
 {% block content %}
 <div class="content-wrapper">
     <div class="content">							
@@ -40,7 +40,7 @@
             <div class="col-12">
                 <div class="card card-default"> 
                     <div class="card-body">
-                        <table class="table table-hover ">
+                    <table class="table table-hover ">
                             <thead>
                                 <tr>
                                     <th scope="col">S.N</th>
