--- a/home/templates/home/base/footer.html
+++ b/home/templates/home/base/footer.html
@@ -156,7 +156,11 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
+        {% if cart_products %}
         <h5 class="modal-title" id="ModalLabel">Your Cart ({{ cart_products.count }})</h5>
+        {% else %}
+        <h5 class="modal-title" id="ModalLabel">No cart</h5>
+        {% endif %}
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span>
         </button>
       </div>
