--- a/home/templates/home/cart/cart.html
+++ b/home/templates/home/cart/cart.html
@@ -68,14 +68,14 @@
                     <div class="d-flex justify-content-center align-items-center">
                       <button class="btn-product btn-product-up"> <i class="las la-minus"></i>
                       </button>
-                      <input class="form-product" type="number" name="form-product" value="1">
+                      <input class="form-product" type="number" name="form-product" value="{{ product.quantity }}">
                       <button class="btn-product btn-product-down"> <i class="las la-plus"></i>
                       </button>
                     </div>
                   </td>
                   <td> <span class="product-price text-dark font-w-6">Nrs. {{ product.subtotal }}</span>
-                    <button type="submit" class="btn btn-primary btn-sm ml-5"><i class="las la-times"></i>
-                    </button>
+                    <a href="{% url 'home:manage-cart' product.id %}?action=remove" type="submit" class="btn btn-primary btn-sm ml-5 remove"><i class="las la-times"></i>
+                    </a>
                   </td>
                 </tr>
                 {% endfor %}
@@ -83,7 +83,7 @@
             </table>
           </div>
           <div class="d-md-flex align-items-end justify-content-between border-top pt-5">
-            <div>
+            <form method="GET">
               <label class="text-dark h4" for="coupon">Coupon</label>
               <p>Enter your coupon code if you have one.</p>
               <div class="row form-row">
@@ -91,10 +91,10 @@
                   <input class="form-control" id="coupon" placeholder="Coupon Code" type="text">
                 </div>
                 <div class="col col-auto">
-                  <button class="btn btn-dark btn-animated">Apply Coupon</button>
+                  <button type="submit" class="btn btn-dark btn-animated apply-coupon">Apply Coupon</button>
                 </div>
               </div>
-            </div>
+            </form>
             <button class="btn btn-primary btn-animated mt-3 mt-md-0">Update Cart</button>
           </div>
         </div>
@@ -117,4 +117,44 @@
   </div>
   
   <!--body content end--> 
+{% endblock %}
+{% block script %}
+<script>
+$('.remove').click(function(e) {
+        e.preventDefault();
+        swal({
+                title: "Are you sure?",
+                text: "It will permanently removed !",
+                icon: "warning",
+                buttons: true,
+                dangerMode: true,
+            })
+            .then((willDelete) => {
+                if (willDelete) {
+                    window.location.href = $(this).attr('href');
+                    swal(" 'A product has been removed.'!", {
+                        icon: "success",
+                    });
+                }
+            });
+    })
+</script>
+<script>
+  $('.apply-coupon').click( function(){
+    let coupon = $('#coupon').val();
+    alert('button clicked' + coupon);
+
+    console.log(coupon);
+    // $.ajax({
+    //   method : "GET",
+    //   url : "{% url 'home:coupon-validation' %}",
+    //   data : {
+    //     code = coupon
+    //   },
+    //   success : function(data){
+    //     console.log(data)
+    //   }
+    // })
+  })
+</script>
 {% endblock %}
