--- a/home/templates/home/cart/cart.html
+++ b/home/templates/home/cart/cart.html
@@ -88,10 +88,10 @@
               <p>Enter your coupon code if you have one.</p>
               <div class="row form-row">
                 <div class="col">
-                  <input class="form-control" id="coupon" placeholder="Coupon Code" type="text">
+                  <input class="form-control" id="c-code" placeholder="Coupon Code" type="text">
                 </div>
                 <div class="col col-auto">
-                  <button class="btn btn-dark btn-animated">Apply Coupon</button>
+                  <button class="btn btn-dark btn-animated" id="code">Apply Coupon</button>
                 </div>
               </div>
             </div>
@@ -106,7 +106,7 @@
             <div class="d-flex justify-content-between align-items-center border-bottom py-3"> <span class="text-muted">VAT</span>  <span class="text-dark">Nrs. {{ cart.vat }}</span> 
             </div>
             <div class="d-flex justify-content-between align-items-center pt-3 mb-5"> <span class="text-dark h5">Total</span>  <span class="text-dark font-weight-bold h5">Nrs. {{ cart.total }}</span> 
-            </div> <a class="btn btn-primary btn-animated btn-block" href="product-checkout.html">Proceed To Checkout</a>
+            </div> <a class="btn btn-primary btn-animated btn-block" href="{% url 'home:checkout' %}">Proceed To Checkout</a>
             <a class="btn btn-dark btn-animated mt-3" href="#">Continue Shopping</a>
           </div>
         </div>
@@ -117,4 +117,31 @@
   </div>
   
   <!--body content end--> 
+{% endblock %}
+
+{% block script %}
+ 
+<script>
+$("#code").click(function(){ 
+  var code = $("#c-code").val();
+  $.ajax({
+    url: "{% url 'home:coupon' %}",
+
+    data: {
+      'coupon_code': code
+    },
+  
+    success: function (data){
+      if (data.valid){
+        alert("Coupon successfully added")
+      }
+      else{
+        alert("Coupon not found");
+      }
+    }
+  });
+});
+</script> 
+
+
 {% endblock %}
