--- a/home/templates/home/auth/register.html
+++ b/home/templates/home/auth/register.html
@@ -75,7 +75,7 @@
                 <div class="form-group">
                   {{form.username}}
               
-           <span class = "form-errors">{{form.username.errors}}</span>  
+           <span class = "form-errors">{{form.errors.username}}</span>  
                 </div>
               </div>
             <div class="col-md-6">
@@ -128,7 +128,7 @@
             <div class="row">
               <div class="col-md-12">
                 <button class="btn btn-primary">Register as a Customer</button>
-                <span class="mt-4 d-block">Have An Account ? <a href="login.html"><i>Sign In!</i></a></span>
+                <span class="mt-4 d-block">Have An Account ? <a href="{% url 'home:login'%}"><i>Sign In!</i></a></span>
               </div>
             </div>
           </form>
