--- a/home/templates/home/base/header.html
+++ b/home/templates/home/base/header.html
@@ -300,7 +300,12 @@
               <ul class="navbar-nav">
              <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle"  data-toggle="dropdown"><i class="las la-user-alt"></i></a>
                   <ul class="dropdown-menu">
-                    <li> <a href="{% url 'home:register' %}">Login/Register</a>
+                  {% if request.user.customer%}
+                     <li> <a href="{% url 'home:logout' %}">Logout</a>
+                  {%else%}
+                    <li> <a href="{% url 'home:login' %}">Login</a>
+                    <li> <a href="{% url 'home:register' %}">Register</a>
+                    {%endif%}
                     </li>
                   </ul>
                 </li>
