--- a/home/templates/home/base/header.html
+++ b/home/templates/home/base/header.html
@@ -57,9 +57,9 @@
             <form class="form-inline border rounded w-100">
               <select class="custom-select border-0 rounded-0 bg-light form-control d-none d-lg-inline">
                 <option selected>All Categories</option>
-                <option value="1">Men</option>
-                <option value="2">Women</option>
-                <option value="3">Kids</option>
+                {% for type in category_type %}
+                <option value="{{ type.id }}">{{ type.type }}</option>
+                {% endfor %}
               </select>
               <input class="form-control border-0 border-left col" type="search" placeholder="Enter Your Keyword" aria-label="Search">
               <button class="btn btn-primary text-white col-auto" type="submit"><i class="las la-search"></i>
@@ -95,27 +95,26 @@
                           <form>
                             <div class="tab">
                               <!-- Nav -->
-                              <nav class="nav nav-tabs border-0 mb-5"> <a class="nav-item nav-link active" data-toggle="tab" href="#navTab">
-                            Women
-                          </a>
-                                <a class="nav-item nav-link" data-toggle="tab" href="#navTab">
-                            Men
-                          </a>
-                                <a class="nav-item nav-link" data-toggle="tab" href="#navTab">
-                            Kids
-                          </a>
+                              <nav class="nav nav-tabs border-0 mb-5">
+                                {% for type in category_type %}
+                                  <a class="nav-item nav-link" data-toggle="tab" href="#{{ forloop.counter }}navTab">
+                                    {{ type.type }}
+                                  </a>
+                                {% endfor %}
                               </nav>
                               <div class="tab-content p-0">
                                 <div class="tab-pane fade show active" id="navTab">
                                   <div class="row">
+                                    {% for category in category %}
                                     <div class="col-12 col-md-3 col-sm-6">
                                       <!-- Heading -->
-                                      <div class="mb-3 font-weight-bold">Clothing</div>
+                                      <div class="mb-3 font-weight-bold">{{ category.name }}</div>
                                       <!-- Links -->
                                       <ul class="list-unstyled mb-6 mb-md-0">
-                                        <li> <a href="shop-grid-left-sidebar.html">All Clothing</a>
+                                        {% for sub in category.parent_set.all %}
+                                        <li> <a href="shop-grid-left-sidebar.html">{{ sub.name }}</a>
                                         </li>
-                                        <li> <a href="shop-grid-left-sidebar.html">Top, T-Shirts & Shirts</a>
+                                        <!-- <li> <a href="shop-grid-left-sidebar.html">Top, T-Shirts & Shirts</a>
                                         </li>
                                         <li> <a href="shop-grid-left-sidebar.html">Lingerie & Sleepwear</a>
                                         </li>
@@ -126,9 +125,11 @@
                                         <li> <a href="shop-grid-left-sidebar.html">Dresses & Skirts</a>
                                         </li>
                                         <li> <a href="shop-grid-left-sidebar.html">Jumpers & Cardigans</a>
-                                        </li>
+                                        </li> -->
+                                        {% endfor %}
                                       </ul>
                                     </div>
+                                    {% endfor %}
                                     <div class="col-12 col-md-3 col-sm-6">
                                       <!-- Heading -->
                                       <div class="mb-3 font-weight-bold">Shoes & Boots</div>
