--- a/home/templates/home/auth/register.html
+++ b/home/templates/home/auth/register.html
@@ -98,7 +98,7 @@
                 <div class="form-group">
                 {{form.password}}  
                 </div>
-                <span>{{ form.errors.password }} errors</span>
+                <span>{{ form.errors.password }}</span>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
