--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -29,8 +29,21 @@
 
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.2.3/themes/dark.css">
-</head>
 
+
+ <style> 
+      .form-error{
+        color : red;
+        padding: 0;
+      }
+
+      .form-error ul li{
+        list-style:none;
+        padding: 0;
+      }
+ </style> 
+
+ </head>
 <body>
 
 <!-- page wrapper start -->
