--- a/home/templates/home/base/header.html
+++ b/home/templates/home/base/header.html
@@ -301,10 +301,12 @@
              <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle"  data-toggle="dropdown"><i class="las la-user-alt"></i></a>
                   <ul class="dropdown-menu">
                   {% if request.user.customer%}
-                     <li> <a href="{% url 'home:logout' %}">Logout</a>
+                   <li> <a href="{% url 'home:customerprofile' %}">Profile</a></li>
+                    <li> <a href="{% url 'home:change-password' %}">Change password</a></li>
+                     <li> <a href="{% url 'home:logout' %}">Logout</a></li>
                   {%else%}
-                    <li> <a href="{% url 'home:login' %}">Login</a>
-                    <li> <a href="{% url 'home:register' %}">Register</a>
+                    <li> <a href="{% url 'home:login' %}">Login</a></li>
+                    <li> <a href="{% url 'home:register' %}">Register</a></li>
                     {%endif%}
                     </li>
                   </ul>
