--- a/home/templates/home/product/detail.html
+++ b/home/templates/home/product/detail.html
@@ -91,7 +91,7 @@
                 <div class="d-sm-flex align-items-center mt-5">
                   <button type="submit" class="btn btn-primary btn-animated mr-sm-4 mb-3 mb-sm-0">
                     <i class="las la-shopping-cart mr-1"></i>Add To Cart</button>
-                  <a class="btn btn-animated btn-dark" href="#"> <i class="lar la-heart mr-1"></i>Add To Wishlist
+                  <a class="btn btn-animated btn-dark" href="{% url 'home:wishlist' %}"> <i class="lar la-heart mr-1"></i>Add To Wishlist
                   </a>
                 </div>
               </form>
