--- a/dashboard/templates/dashboard/base/sidebar.html
+++ b/dashboard/templates/dashboard/base/sidebar.html
@@ -48,7 +48,7 @@
                       </li>
                       {% for cat in sidebar_categories %}
                       <li  class="{% active_link 'dashboard:specific-products' 'active' %}" >
-                        <a class="sidenav-item-link" href="{% url 'dashboard:specific-products' %}?category={{ cat.name }}">
+                        <a class="sidenav-item-link" href="{% url 'dashboard:specific-products' %}?category={{ cat.type }}">
                           <span class="nav-text">{{ cat.type }}</span>
                         </a>
                       </li>
