--- a/dashboard/templates/dashboard/product/form.html
+++ b/dashboard/templates/dashboard/product/form.html
@@ -21,7 +21,7 @@
                             <div class="row form-group">
                                 <div class="col-md-4 col-sm-12">
                                     <label for="exampleFormControlInput1">Product Type</label>
-                                    {{ form.category_type }}
+                                    {{ form.type }}
                                 </div>
                                 <div class="col-md-4 col-sm-12">
                                     <label for="exampleFormControlInput1">Category </label>
@@ -47,10 +47,6 @@
                                 <div class="col-md-6 col-sm-12">
                                     <label for="exampleFormControlInput1">Marked Price</label>
                                     {{ form.marked_price }}
-                                </div>
-                                <div class="col-md-6 col-sm-12">
-                                    <label for="exampleFormControlInput1">Selling Price</label>
-                                    {{ form.selling_price }}
                                 </div>
                                 <div class="col-md-6 col-sm-12">
                                     <label for="exampleFormControlPassword">discount percent</label>
