--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -41,6 +41,17 @@
         list-style:none;
         padding: 0;
       }
+.profile-navbar{
+        margin: 5px 0;
+    padding: 10px;
+}
+.profile-navbar li {
+  list-style:none;
+        margin: 5px 0;
+
+}
+
+
  </style> 
 
  </head>
