--- a/home/templates/home/base/footer.html
+++ b/home/templates/home/base/footer.html
@@ -151,6 +151,30 @@
 </footer>
 <!--footer end-->
 
+<!-- Profile Modal -->
+<div class="modal fade cart-modal" id="profileModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      <ul class="profile-navbar">
+        {% if request.user.customer%}
+                   <li> <a href="{% url 'home:customerprofile' %}">Profile</a></li>
+                    <li> <a href="{% url 'home:change-password' %}">Change password</a></li>
+                     <li> <a href="{% url 'home:logout' %}">Logout</a></li>
+                  {%else%}
+                    <li> <a href="{% url 'home:login' %}">Login</a></li>
+                    <li> <a href="{% url 'home:register' %}">Register</a></li>
+                    {%endif%}
+                    </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- Cart Modal -->
 <div class="modal fade cart-modal" id="cartModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
