--- a/home/templates/home/base/footer.html
+++ b/home/templates/home/base/footer.html
@@ -192,7 +192,7 @@
         {% endfor %}
         <div class="d-flex justify-content-between align-items-center mb-8"> <span class="text-muted">Subtotal:</span>  <span class="text-dark">Nrs. {{ subtotal }}</span> 
         </div> <a href="{% url 'home:my-cart' %}" class="btn btn-primary btn-animated mr-2"><i class="las la-shopping-cart mr-1"></i>View Cart</a>
-        <a href="product-checkout.html" class="btn btn-dark"><i class="las la-money-check mr-1"></i>Continue To Checkout</a>
+        <a href="{% url 'home:checkout' %}" class="btn btn-dark"><i class="las la-money-check mr-1"></i>Continue To Checkout</a>
       </div>
     </div>
   </div>
