--- a/home/templates/home/checkout/checkout.html
+++ b/home/templates/home/checkout/checkout.html
@@ -99,7 +99,7 @@
              {% endfor %}
          
              <li class="mb-3 border-bottom pb-3"><span> VAT </span>{{ cart.vat }}</li>
-             
+            {% comment %} {% if %} {% endcomment %}
             <li><span><strong class="cart-total"> Total :</strong></span>  <strong class="cart-total">Rs. {{ cart.total }} </strong>
           
             </li>
