--- a/home/templates/home/base/header.html
+++ b/home/templates/home/base/header.html
@@ -296,7 +296,9 @@
                 </li>
                  </ul>
             </div>
-              <a class="mr-3 d-none d-sm-inline" href="#"><i class="lar la-heart"></i></a>
+              <a class="mr-3 d-none d-sm-inline" href="{% url 'home:my-wishlist' %}"><i class="lar la-heart"></i></a>
+              
+
               <div>
                 <a class="d-flex align-items-center" href="#" id="header-cart-btn" data-toggle="modal" data-target="#cartModal"> <span class="bg-white px-2 py-1 shadow-sm rounded" {% if cart_products %} data-cart-items="{{ cart_products.count }}" {% endif %}>
                   <i class="las la-shopping-cart"></i>
