--- a/home/templates/home/base/index.html
+++ b/home/templates/home/base/index.html
@@ -1,4 +1,5 @@
 {% extends 'home/base.html' %} 
+{% block title %} Home {% endblock %}
 {% load static %} 
 {% block content %}
 
@@ -90,7 +91,7 @@
       {% for product in trend_products|slice:8 %}
       <div class="col-xl-3 col-lg-4 col-md-6">
         <div class="card product-card">
-          <button class="btn-wishlist btn-sm" type="button" data-toggle="tooltip" data-placement="left" title="Add to wishlist"><i class="lar la-heart"></i>
+          <a href="{% url 'home:add-to-wishlist' product.pk %}"><button class="btn-wishlist btn-sm" type="button" data-toggle="tooltip" data-placement="left" title="Add to wishlist"><i class="lar la-heart"></i></a>
           </button>
           <a class="card-img-hover d-block" href="{% url 'home:product-detail' product.id %}">
             {% for img in product.image.all|slice:12 %}
