user cart and session cart merged

--- a/home/templates/home/wishlist/wishlist.html
+++ b/home/templates/home/wishlist/wishlist.html
@@ -46,7 +46,7 @@
                 </tr>
               </thead>
               <tbody>
-              {{ wishlist.products.name }}
+              {{ wishlist.products }}
               {{ wishlist.products.selling_price }}
               
                 {% for wishlist in wishlist.products_set.all %}
