--- a/home/templates/home/auth/login.html
+++ b/home/templates/home/auth/login.html
@@ -57,7 +57,7 @@
             <div class="form-group mt-4 mb-5">
               <div class="remember-checkbox d-flex align-items-center justify-content-between">
                 <div class="checkbox">
-                  <input type="checkbox" id="check2" name="check2">
+                  <input type="checkbox" checked="" id="remember">
                   <label for="check2">Remember me</label>
                 </div>
                  <a href="{% url 'home:forgot-password' %}">Forgot Password?</a>
