--- a/dashboard/templates/dashboard/auth/login.html
+++ b/dashboard/templates/dashboard/auth/login.html
@@ -18,7 +18,7 @@
                     <div class="d-flex my-2 justify-content-between">
                       <div class="d-inline-block mr-3">
                         <label class="control control-checkbox">Remember me
-                          <input type="checkbox" />
+                          <input type="checkbox" checked="" id="remember"/>
                           <div class="control-indicator"></div>
                         </label>
                 
